# auth-pg

./: Cargo.toml  commands.sql  curl.txt  domains.txt
react-ui/: package.json
react-ui/src/: App.css  App.js
react-ui/src/components/: Header.css  Header.js
react-ui/src/pages/: Chat.js  SignupForm.js
src/: auth_google.rs  lib.rs  main.rs
static/: 404.html
