[package]
name = "story-game"
version = "0.1.0"
authors = ["luke <goodvibrato@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.8"
actix-files = "0.1.6"
futures = "0.1.29"
r2d2_postgres = "0.14.0"
serde = "1.0.102"
serde_json = "1.0.41"
serde_derive = "1.0.103"
failure = "0.1.6"
jsonwebtoken = {version = "7.0.0-alpha.1"}
reqwest = "0.9.22"
